<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora Beta</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txt_num1">N° 1</string>
    <string name="txt_num2">N° 2</string>
    <string name="resultado">Resultado</string>
    <string name="btn_suma">Suma</string>
    <string name="btn_resta">Resta</string>
	<string name="btn_mult">Multiplicación</string>
	<string name="btn_div">División</string>
</resources>
