<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     >

    <RelativeLayout
        android:id="@+id/linea1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.66"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/nume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="27dp"
            android:text="@string/txt_num1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/nume"
            android:layout_marginTop="22dp"
            android:text="@string/txt_num2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edt_txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="numberDecimal" 
           
            />

        <EditText
            android:id="@+id/edt_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/nume"
            android:layout_alignLeft="@+id/edt_txt2"
            android:ems="10"
            android:inputType="numberDecimal" 
            />

        <TextView
            android:id="@+id/resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edt_txt2"
            android:layout_marginTop="24dp"
            android:text="@string/resultado"
            android:textAppearance="?android:attr/textAppearanceMedium" />

      </RelativeLayout>

    <LinearLayout
        android:id="@+id/linea2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" 
        android:onClick="operacion">

        <Button
            android:id="@+id/btn_suma"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="suma"
            android:text="@string/btn_suma" />

        <Button
            android:id="@+id/btn_resta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="resta"
            android:text="@string/btn_resta" />

        <Button
            android:id="@+id/btn_multi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="multiplicacion"
            android:text="@string/btn_mult" />

        <Button
            android:id="@+id/btn_divi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="division"
            android:text="@string/btn_div" />
    </LinearLayout>

</LinearLayout>